--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --primary: #2660de;
+
+  --primary-background: #111828;
+  --secondary-background: #464a52;
+  --foreground: #fff;
+
+  --card: 0 0% 100%;
+  --card-foreground: 222.2 84% 4.9%;
+}
