--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,9 @@
   --primary: #2660de;
 
   --primary-background: #111828;
-  --secondary-background: #464a52;
+  --secondary-background: #202938;
   --foreground: #fff;
+  --charcoal-solid: #384152;
 
   --card: 0 0% 100%;
   --card-foreground: 222.2 84% 4.9%;
